# NodevisionDB

./: .gitignore  .npmignore  CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake  index.js  nodevision_db  package-lock.json  package.json  test.js
include/: GraphDB.hpp
src/: GraphDB.cpp  binding.cpp  main.cpp
test/: test_graphdb.cpp
